# LinearHydroAna

./: README.md
include/: CHOLMODSolver.hpp  EigenLibSolver.hpp  LinSysSolver.hpp  hex8nodeEle.hpp  hex8nodeSolver.hpp  info.hpp  readCondition.hpp  readHexMesh.hpp  readTetMesh.hpp  shapeInterface.hpp  tet4nodeEle.hpp  tet4nodeSolver.hpp
tests/hex_bunny10w/: CMakeLists.txt  main.cpp  processVTK.py
tests/hex_bunny10w/input/: condition.in
tests/hex_bunny10w/output/: result_uvw.txt
tests/hex_bunny7k/: CMakeLists.txt  main.cpp  processVTK.py
tests/hex_bunny7k/input/: bunny7k.in  bunny7k.vtk  condition.in
tests/hex_bunny7k/output/: result_bunny7k.vtk  result_uvw.txt
tests/hex_cube/: CMakeLists.txt  main.cpp  processVTK.py  readHex.cpp  readvtk.py
tests/hex_cube/input/: condition.in  cube.in  cube.vtk
tests/hex_cube/output/: TVandTT.txt  result.vtk  result_uvw.txt
tests/hex_smallCube/: CMakeLists.txt  main.cpp
tests/hex_smallCube/input/: condition.in  cube.in
tests/hex_smallCube/output/: result_uvw.txt
tests/tet_armadillo/: Makefile  main.cpp
tests/tet_armadillo/input/: condition.in
tests/tet_bunny/: Makefile  main  main.cpp  preprocess.hpp
tests/tet_bunny/input/: bunny.vtk  condition.in
tests/tet_bunny/output/: result_bunny.msh  result_bunny.vtk  result_uvw.txt
tests/tet_cube/: main  main.cpp
tests/tet_cube/input/: condition.in
tests/tet_cube/output/: result_cube.msh
tests/tet_monster/: main  main.cpp  preprocess.hpp
tests/tet_monster/input/: condition.in
